# little_game

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.old  README.md  conan.cmake  conanfile.py  conanfile.txt  run.bat  run.sh
.github/workflows/: build_unix.yml  linux.yml  main.yml  mingw.yml  msys2.yml  win32.yml
assets/: basic.frag  basic.vert  texture_pack.json
assets/materials/terrain/: basic.json
assets/models/blocks/: CommonBlock.json
assets/shaders/: basic.vert
assets/shaders/terrain/: basic.frag  basic.vert
cfg/: engine.cfg  engine.json
config/: engine.json
include/: Config.hpp  SDL.hpp  glDebug.h  macros.h  operators.hpp
include/engine/: Block.hpp  BlockRegistry.hpp  BlockType.hpp  Camera.hpp  Chunk.hpp  Config.hpp  File.hpp  Game.hpp  NamedRegistry.hpp  OptionalArray.hpp  Result.hpp  Sides.hpp  Stream.hpp  block_t.hpp  cache.hpp  camera.hpp  chunk_mesh_generation.hpp  chunk_renderer.hpp  chunk_t.hpp  game.hpp  named_storage.hpp  nonnull.hpp  resources.hpp  result.hpp  serializable_component.hpp  string.hpp  textures.hpp
include/engine/assets/: BlockMesh.hpp  BlockModel.hpp  IAsset.hpp  Image.hpp
include/engine/components/: ChunkData.hpp  ChunkPosition.hpp  Dirty.hpp
include/engine/ecs/: system.hpp
include/engine/ecs/components/: Camera.hpp  ChunkData.hpp  Dirty.hpp  LocalPlayer.hpp
include/engine/ecs/systems/: localplayer_camera.hpp
include/engine/errors/: AlreadyRegistered.hpp  InvalidResourceName.hpp  UnsupportedFileType.hpp
include/engine/rendering/: IRenderTarget.hpp  IRenderer.hpp  Mesh.hpp  Vertex.hpp  block.hpp  chunk.hpp
include/engine/rendering/opengl/: FrameBuffer.hpp  MeshHandle.hpp  Object.hpp  RenderTarget.hpp  Renderer.hpp  Texture.hpp
include/engine/rendering/vulkan/: Renderer.hpp  State.hpp
include/engine/sdl/: Error.hpp  RWOps.hpp  Window.hpp
include/engine/system/: block_size.hpp  open_file.hpp  page_size.hpp
include/math/: bits.hpp  constexpr.hpp  fast.hpp
include/utils/: FileHandle.hpp  cache.hpp  compressed_pair.hpp  error.hpp  file.hpp  memory.hpp  strings.hpp  thread_pool.hpp  timeit.hpp  trees.hpp  unique_resource.hpp  url.hpp
lua/: cl_init.lua  sv_init.lua
recipes/mold/: CMakeLists.txt  conandata.yml  conanfile.py
recipes/vgame/: conanfile.py
recipes/vgame_tools/: conanfile.py
res/: ModelSchema.json
res/schemas/: MaterialSchema.json  ModelSchema.json
src/: cache.cpp  chunk_mesh_generation.cpp  chunk_renderer.cpp  config.cpp  error.cpp  fast_math.cpp  file.cpp  game.cpp  glDebug.c  lua_bindings.cpp  main.cpp  resources.cpp  textures.cpp
src/assets/: BlockMesh.cpp  BlockModel.cpp  IAsset.cpp  Image.cpp
src/engine/: BlockRegistry.cpp  BlockType.cpp  Config.cpp  File.cpp  resources.cpp
src/engine/ecs/: system.cpp
src/engine/ecs/systems/: localplayer_camera.cpp
src/engine/errors/: AlreadyRegistered.cpp  InvalidResourceName.cpp  UnsupportedFileType.cpp
src/engine/rendering/opengl/: RenderTarget.cpp  Renderer.cpp  render.cpp  renderer.cpp
src/engine/rendering/vulkan/: State.cpp  render.cpp  renderer.cpp
src/game/: input.cpp  render.cpp  shared.cpp  update.cpp
src/game/blocks/: Air.cpp  Colorful.cpp  Dirt.cpp  Grass.cpp  Stone.cpp
src/lua/: Buffer.cpp  format.cpp
src/unix/: block_size.cpp  open_file.cpp  page_size.cpp
src/win32/: block_size.cpp  open_file.cpp  page_size.cpp
tools/: CMakeLists.txt  build.Dockerfile  build_mingw.sh  build_unix.sh  conanfile.txt  resource_compiler.py
tools/rc/: json_proprocessor.py
tools/src/: install_shared_libraries.cpp  resource_compiler.cpp
